# fibonacci-api-challenge

./: AGENTS.md  Dockerfile  README.md  pyproject.toml  usageofai
.github/: secrets.env.schema  variables.common.env.schema  variables.dev.env.schema  variables.env.schema  variables.prod.env.schema  variables.test.env.schema
.github/workflows/: cd-template.yml  ci.yml
k8s/: deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  networkpolicy.yaml  pdb.yaml  secretproviderclass.yaml  service.yaml  serviceaccount.yaml
k8s/monitoring/: prometheusrule.yaml  servicemonitor.yaml
src/: __init__.py
src/app/: constants.py  fibonacci.py  main.py  router.py
src/app/helper/: __init__.py  exception_handlers.py  landing_page.py  logging_helper.py
tests/: test_api.py
