[project]
name = "fibonacci-sequence-api"
version = "1.0.0"
description = "REST API that returns the nth Fibonacci number"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn[standard]==0.35.0",
]

[dependency-groups]
dev = [
    "httpx==0.28.1",
    "pytest==8.4.1",
]
